scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/composition2.yf
---
name: echo-composition
graphs:
  start:
    - type: EchoNode
      put: A
      value: 1

    - type: IntToStringNode
      integer: "{A}"
      string: A

    - type: EchoNode
      put: B
      value: ["{A}"]

    - type: StringContainsNode
      regex: "notimportant"
      content: "{{B}}[0]" # content :: String

