scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/intToString.yf
---
name: full
graphs:
  start:
     - type: IntRangeNode
       from: 1
       to: 10

     - type: StringContainsNode
       regex: "notimportant"
       content: "{{i}}[0]" # content :: String
